force-app/main/default/objects/Call_Line__c/fields/Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ext ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>