force-app/main/default/objects/Call_Line__c/fields/FU__c.field-meta.xml
<CustomField>
    <fullName>FU__c</fullName>
    <label>FU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>