force-app/main/default/objects/Call_Line__c/fields/HOMEPHONE2__c.field-meta.xml
<CustomField>
    <fullName>HOMEPHONE2__c</fullName>
    <label>HOMEPHONE2</label>
    <type>Phone</type>
</CustomField>