force-app/main/default/objects/Call_Line__c/fields/Identity_No__c.field-meta.xml
<CustomField>
    <fullName>Identity_No__c</fullName>
    <label>Identity No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>