force-app/main/default/objects/Call_Line__c/fields/Info_FHS__c.field-meta.xml
<CustomField>
    <fullName>Info_FHS__c</fullName>
    <label>Info FHS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>