force-app/main/default/objects/Call_Line__c/fields/Info_Pendingan__c.field-meta.xml
<CustomField>
    <fullName>Info_Pendingan__c</fullName>
    <defaultValue>&quot;Not Clean&quot;</defaultValue>
    <label>Info Pendingan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Not Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>