force-app/main/default/objects/Call_Line__c/fields/Is_Already_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Already_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Already Assigned</label>
    <type>Checkbox</type>
</CustomField>