force-app/main/default/objects/Call_Line__c/fields/Is_Calledback_Already__c.field-meta.xml
<CustomField>
    <fullName>Is_Calledback_Already__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Calledback Already</label>
    <type>Checkbox</type>
</CustomField>