force-app/main/default/objects/Call_Line__c/fields/Jawaban_Agent_Validation__c.field-meta.xml
<CustomField>
    <fullName>Jawaban_Agent_Validation__c</fullName>
    <label>Jawaban (Agent Validation)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ya</fullName>
            </value>
            <value>
                <fullName>Tidak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>