force-app/main/default/objects/Call_Line__c/fields/Jumlah_yang_didebet__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_yang_didebet__c</fullName>
    <label>Jumlah yang didebet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>