force-app/main/default/objects/Call_Line__c/fields/Line11__c.field-meta.xml
<CustomField>
    <fullName>Line11__c</fullName>
    <label>Line11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>