force-app/main/default/objects/Call_Line__c/fields/Line12__c.field-meta.xml
<CustomField>
    <fullName>Line12__c</fullName>
    <label>Line12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>