force-app/main/default/objects/Call_Line__c/fields/Line13__c.field-meta.xml
<CustomField>
    <fullName>Line13__c</fullName>
    <label>Line13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>