force-app/main/default/objects/Call_Line__c/fields/MobilePhone_Upload__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_Upload__c</fullName>
    <label>MobilePhone (Upload)</label>
    <type>Phone</type>
</CustomField>