force-app/main/default/objects/Call_Line__c/fields/MonthsPaid__c.field-meta.xml
<CustomField>
    <fullName>MonthsPaid__c</fullName>
    <label>MonthsPaid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>