force-app/main/default/objects/Call_Line__c/fields/Nama_Pemilik_Rekening__c.field-meta.xml
<CustomField>
    <fullName>Nama_Pemilik_Rekening__c</fullName>
    <label>Nama Pemilik Rekening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>