force-app/main/default/objects/Call_Line__c/fields/Name_2__c.field-meta.xml
<CustomField>
    <fullName>Name_2__c</fullName>
    <inlineHelpText>For Upload ALI</inlineHelpText>
    <label>Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>