force-app/main/default/objects/Call_Line__c/fields/New_Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_Value__c</fullName>
    <label>New Plan Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>