force-app/main/default/objects/Call_Line__c/fields/Nilai_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Nilai_Withdrawal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nilai Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>