force-app/main/default/objects/Call_Line__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <inlineHelpText>for Upload ALI</inlineHelpText>
    <label>No</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>