force-app/main/default/objects/Call_Line__c/fields/Nominal__c.field-meta.xml
<CustomField>
    <fullName>Nominal__c</fullName>
    <label>Nominal</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>