force-app/main/default/objects/Call_Line__c/fields/Nomor_CC__c.field-meta.xml
<CustomField>
    <fullName>Nomor_CC__c</fullName>
    <label>Nomor CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>