force-app/main/default/objects/Call_Line__c/fields/Nomor_Rekening__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Rekening__c</fullName>
    <label>Nomor Rekening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>