force-app/main/default/objects/Call_Line__c/fields/Number_Of_Call__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Call__c</fullName>
    <label>Number Of Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>