force-app/main/default/objects/Call_Line__c/fields/Offering2__c.field-meta.xml
<CustomField>
    <fullName>Offering2__c</fullName>
    <label>Offering2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>