force-app/main/default/objects/Call_Line__c/fields/Offering_Retain__c.field-meta.xml
<CustomField>
    <fullName>Offering_Retain__c</fullName>
    <label>Offering Retain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retain with withdrawal</fullName>
            </value>
            <value>
                <fullName>Pengurangan Withdrawal</fullName>
            </value>
            <value>
                <fullName>Delete / Change RTU</fullName>
            </value>
            <value>
                <fullName>Delete / Add Rider</fullName>
            </value>
            <value>
                <fullName>Downgrade UP</fullName>
            </value>
            <value>
                <fullName>Change Freq Payment Payment</fullName>
            </value>
            <value>
                <fullName>Change to AFI&apos;s other product</fullName>
            </value>
            <value>
                <fullName>Switch / Change Fund</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>