force-app/main/default/objects/Call_Line__c/fields/OFFICEPHONE2__c.field-meta.xml
<CustomField>
    <fullName>OFFICEPHONE2__c</fullName>
    <label>OFFICEPHONE2</label>
    <type>Phone</type>
</CustomField>