force-app/main/default/objects/Call_Line__c/fields/OFFICEPHONE__c.field-meta.xml
<CustomField>
    <fullName>OFFICEPHONE__c</fullName>
    <label>OFFICEPHONE</label>
    <type>Phone</type>
</CustomField>