force-app/main/default/objects/Call_Line__c/fields/Old_Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Plan_Value__c</fullName>
    <label>Old Plan Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>