force-app/main/default/objects/Call_Line__c/fields/Old_Result__c.field-meta.xml
<CustomField>
    <fullName>Old_Result__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI</inlineHelpText>
    <label>Old Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>