force-app/main/default/objects/Call_Line__c/fields/PaidToDate__c.field-meta.xml
<CustomField>
    <fullName>PaidToDate__c</fullName>
    <label>PaidToDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>