force-app/main/default/objects/Call_Line__c/fields/Parent_Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Call_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ALI - Group by</inlineHelpText>
    <label>Parent Call Line</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Call Lines</relationshipLabel>
    <relationshipName>Call_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>