force-app/main/default/objects/Call_Line__c/fields/Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Campaign</label>
    <referenceTo>Call_List__c</referenceTo>
    <relationshipLabel>Call Lines (Parent Campaign)</relationshipLabel>
    <relationshipName>Call_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>