force-app/main/default/objects/Call_Line__c/fields/Periode_Terdebet__c.field-meta.xml
<CustomField>
    <fullName>Periode_Terdebet__c</fullName>
    <label>Periode Terdebet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>