force-app/main/default/objects/Call_Line__c/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <description>Phone 2 AGI</description>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>