force-app/main/default/objects/Call_Line__c/fields/Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_3__c</fullName>
    <description>Phone 3 AGI</description>
    <label>Phone 3</label>
    <type>Phone</type>
</CustomField>