force-app/main/default/objects/Call_Line__c/fields/Phone_Sending_SMS__c.field-meta.xml
<CustomField>
    <fullName>Phone_Sending_SMS__c</fullName>
    <description>Untuk di section Messanging SMS Collection AMFS</description>
    <label>Phone Sending SMS</label>
    <type>Phone</type>
</CustomField>