force-app/main/default/objects/Call_Line__c/fields/PIC_Travel_AGI__c.field-meta.xml
<CustomField>
    <fullName>PIC_Travel_AGI__c</fullName>
    <description>PIC Travel AGI</description>
    <label>PIC Travel AGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>