force-app/main/default/objects/Call_Line__c/fields/POLIS__c.field-meta.xml
<CustomField>
    <fullName>POLIS__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : PORTAL
Cancel</inlineHelpText>
    <label>POLIS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PORTAL</fullName>
            </value>
            <value>
                <fullName>CANCEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>