force-app/main/default/objects/Call_Line__c/fields/Premium2__c.field-meta.xml
<CustomField>
    <fullName>Premium2__c</fullName>
    <label>Premium2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>