force-app/main/default/objects/Call_Line__c/fields/Prev_Acc_Balance__c.field-meta.xml
<CustomField>
    <fullName>Prev_Acc_Balance__c</fullName>
    <label>Prev Acc Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>