force-app/main/default/objects/Call_Line__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : Priority 1
Priority 2</inlineHelpText>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>