force-app/main/default/objects/Call_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI 
Exp : HPE01</inlineHelpText>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>