force-app/main/default/objects/Call_Line__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Status_Config__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Presented</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>