force-app/main/default/objects/Call_Line__c/fields/Q3__c.field-meta.xml
<CustomField>
    <fullName>Q3__c</fullName>
    <description>Question 3</description>
    <label>Q3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>