force-app/main/default/objects/Call_Line__c/fields/Refference_No__c.field-meta.xml
<CustomField>
    <fullName>Refference_No__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : 04/08/17-1030401-07887XX</inlineHelpText>
    <label>Refference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>