force-app/main/default/objects/Call_Line__c/fields/RejReason__c.field-meta.xml
<CustomField>
    <fullName>RejReason__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : Inssufficient Funds,
Declined / Do Not Honour
do not honour
Customer account not sufficien
FIN ACCT MORE THAN 1
pick-up/pick-up</inlineHelpText>
    <label>RejReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>