force-app/main/default/objects/Call_Line__c/fields/Remark_Hold_Debet__c.field-meta.xml
<CustomField>
    <fullName>Remark_Hold_Debet__c</fullName>
    <label>Remark Hold Debet</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>