force-app/main/default/objects/Call_Line__c/fields/Remarks_Agent_Validation__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Agent_Validation__c</fullName>
    <label>Remarks (Agent Validation)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>