force-app/main/default/objects/Call_Line__c/fields/Remarks_Alamat__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Alamat__c</fullName>
    <label>Remarks (Alamat)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>