force-app/main/default/objects/Call_Line__c/fields/Remarks_DOB__c.field-meta.xml
<CustomField>
    <fullName>Remarks_DOB__c</fullName>
    <label>Remarks (DOB)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>