force-app/main/default/objects/Call_Line__c/fields/Remarks_Email__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Email__c</fullName>
    <label>Remarks (Email)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>