force-app/main/default/objects/Call_Line__c/fields/Remarks_ePolicy_Buku_Polis__c.field-meta.xml
<CustomField>
    <fullName>Remarks_ePolicy_Buku_Polis__c</fullName>
    <label>Remarks (e-Policy/Buku Polis)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>