force-app/main/default/objects/Call_Line__c/fields/Remarks_Nama_PP_TT__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Nama_PP_TT__c</fullName>
    <label>Remarks (Nama PP &amp; TT)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>