force-app/main/default/objects/Call_Line__c/fields/Remarks_Telepon__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Telepon__c</fullName>
    <label>Remarks (Telepon)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>