force-app/main/default/objects/Call_Line__c/fields/Remarks_Understand_Product__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Understand_Product__c</fullName>
    <label>Remarks (Understand Product)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>