force-app/main/default/objects/Call_Line__c/fields/REPORT_POLICY_DELIVERY__c.field-meta.xml
<CustomField>
    <fullName>REPORT_POLICY_DELIVERY__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : 28/08/2017 08:50</inlineHelpText>
    <label>REPORT POLICY DELIVERY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>