force-app/main/default/objects/Call_Line__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <label>Request Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>