force-app/main/default/objects/Call_Line__c/fields/Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Date__c</fullName>
    <description>Date/time on which we got reminded of contacting customer</description>
    <label>Reschedule Date</label>
    <type>DateTime</type>
</CustomField>